# aviah4ck

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
app/: SessionState.py  main.py  state.py
app/db/: __init__.py  base.py  cli.py  dataset.py  model.py  project.py  settings.py  utils.py
app/db/dummy/: dataset.csv  labelled_dataset.tar.xz  model.csv  project.csv  unlabelled_dataset.tar.xz
app/model/: coco_eval.py  coco_utils.py  config.yaml  crops_df_big.csv  engine.py  inference.py  train.py  train_entry.py  utils.py
app/model/data/: state9.pth
app/pages/: __init__.py  about.py  dataset.py  head.py  inference.py  label.py  project.py  train.py  utils.py
script/: app.py
torch/: inference.py  train.py  train_entry.py
